# win_gl

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  generate.bat  imgui.ini  run.bat
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: app.cpp
